# WeatherForecast

./: CMakeLists.txt  data.json  main.cpp
lib/: cities.cpp  cities.h  interface.cpp  utils.h  weather_forecast.cpp  weather_forecast.h
